--- a/src/pages/Detail/index.css
+++ b/src/pages/Detail/index.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 50px;
   margin-top: 120px;
-  margin-bottom: 50px;
+  margin-bottom: 150px;
   background-color: var(--white);
   padding: 20px 30px;
 }
